--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 12:45+0000\n"
+"PO-Revision-Date: 2017-10-20 04:41+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -73,12 +73,12 @@ msgid "Enable on-access virus scanning"
 msgstr "Aktivera \"vid åtkomst\"-virusskanning"
 
 msgid "Enable scanning of ELF files."
-msgstr "Aktivera skanning av ELF filer."
+msgstr "Aktivera skanning av ELF-filer."
 
 msgid ""
 "Enable scanning of OLE2 files, such as Microsoft Office documents and .msi "
 "files."
-msgstr "Aktivera skanning av OLE2 filer, såsom Microsoft Office-dokument och .msi-filer."
+msgstr "Aktivera skanning av OLE2-filer, såsom Microsoft Office-dokument och .msi-filer."
 
 msgid "Enable scanning within PDF files."
 msgstr "Aktivera innehållsskanning för PDF-filer."
