--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
@@ -7,6 +7,7 @@
 # Alexander Savchenko <>, 2012
 # Alexander Savchenko, 2014
 # mictian <ffrants@gmail.com>, 2012
+# Volker <votdev@gmx.de>, 2017
 # Артур Мудрых <arturmon82@gmail.com>, 2012-2013
 # Артур Мудрых <arturmon82@gmail.com>, 2017
 msgid ""
@@ -14,8 +15,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 17:07+0000\n"
-"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
+"PO-Revision-Date: 2017-10-22 00:18+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -205,7 +206,7 @@ msgid "Send command output via email"
 msgstr "Отправить вывод комманды по электронной почте"
 
 msgid "Send email"
-msgstr "Отпавить электронное письмо"
+msgstr "Отправить электронное письмо"
 
 msgid "Settings"
 msgstr "Настройки"
