--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 21:10+0200\n"
-"PO-Revision-Date: 2017-09-25 05:48+0000\n"
-"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
+"PO-Revision-Date: 2017-10-16 12:54+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2001,7 +2001,7 @@ msgid "Mirror"
 msgstr "Tükör"
 
 msgid "Missing"
-msgstr "Hiányzó"
+msgstr "Leválasztott"
 
 msgid "Mode"
 msgstr "Mód"
