--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 21:10+0200\n"
-"PO-Revision-Date: 2017-09-24 19:10+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-10-14 12:28+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -881,7 +881,7 @@ msgid "Disk usage"
 msgstr "磁盘使用"
 
 msgid "Displaying items {0} - {1} of {2}"
-msgstr "显示项目 {0} - {1} 一共 {2}"
+msgstr "显示项目 {0} - {1} 一共 {2} 项"
 
 msgid "Displaying {0} - {1} of {2}"
 msgstr "显示 {0} - {1} 一共 {2}"
@@ -2264,7 +2264,7 @@ msgid "Package information"
 msgstr "软件包信息"
 
 msgid "Page"
-msgstr "页"
+msgstr "页码"
 
 msgid "Page not found"
 msgstr "没有找到页面"
@@ -4017,7 +4017,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "共 {0} 页"
 
 msgid "old-age"
 msgstr "已老化"
