--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-ldap (4.0-1) stable; urgency=low
+
+  * Adapt to Debian 9 (Stretch).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 Oct 2017 12:00:39 +0100
+
 openmediavault-ldap (3.1.6) stable; urgency=low
 
   * Mantis 0001715: Wrong permissions of config files with sensitive data.
