--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.9-1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 Oct 2017 17:05:47 +0100
+
 openmediavault (4.0.8-1) stable; urgency=low
 
   * Various improvements.
