--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -4,6 +4,12 @@ openmediavault-lvm2 (4.0-1) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 20 Aug 2017 14:34:15 +0200
 
+openmediavault-lvm2 (3.2.5) stable; urgency=low
+
+  * Fix issue when getting the VG device file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 01 Nov 2017 10:05:01 +0100
+
 openmediavault-lvm2 (3.2.4) stable; urgency=low
 
   * Update locales.
