--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (4.0.1-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 01 Nov 2017 10:16:26 +0100
+
 openmediavault-lvm2 (4.0-1) stable; urgency=low
 
   * Adapt to Debian 9 (Stretch).
