--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (4.0.9-1) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001841: Firewall rules created in random order after reboot.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 Oct 2017 17:05:47 +0100
 
