--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -74,6 +74,12 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.91) stable; urgency=low
+
+  * Mantis 0001841: Firewall rules created in random order after reboot.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Nov 2017 18:56:57 +0100
+
 openmediavault (3.0.90) stable; urgency=low
 
   * Various improvements.
