--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (4.0.3-1) stable; urgency=low
+
+  * Fix bug in omv-mkrrdgraph plugin.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 04 Nov 2017 18:28:45 +0100
+
 openmediavault-nut (4.0.2-1) stable; urgency=low
 
   * Fix collectd configuration issue.
