Fix issue in omv-firstaid 'Check RRD database' when performance statistics are disabled.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (3.0.92) stable; urgency=low
+
+  * Fix issue in omv-firstaid 'Check RRD database' when performance statistics
+    are disabled.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Nov 2017 07:20:17 +0100
+
 openmediavault (3.0.91) stable; urgency=low
 
   * Mantis 0001841: Firewall rules created in random order after reboot.
