--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -87,6 +87,7 @@ openmediavault (3.0.92) stable; urgency=low
   * Fix issue in omv-firstaid 'Check RRD database' when performance statistics
     are disabled.
   * Fix time zone configuration issue.
+  * Fix bug in omv.collections.DotDict class.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Nov 2017 07:20:17 +0100
 
