Add Material Design Icons (https://materialdesignicons.com). Note, the Material Design icons should only be used for the navigation tree icons, DO NOT USE them in other UI elements (this must be Font Awesome icons because the rest of the ExtJS theme is using them).
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-route/debian/changelog
+++ b/deb/openmediavault-route/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-route (4.0.1-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 22:17:29 +0100
+
 openmediavault-route (4.0-1) stable; urgency=low
 
   * Adapt to Debian 9 (Stretch).
