--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-forkeddaapd (4.0.1-1) stable; urgency=low
+
+  * Update locales.
+  * Use Material Design icons.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 22:13:20 +0100
+
 openmediavault-forkeddaapd (4.0-1) stable; urgency=low
 
   * Adapt to Debian 9 (Stretch).
