--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-netatalk (4.0.2-1) stable; urgency=low
+
+  * Update locales.
+  * Use Material Design icons.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 22:10:45 +0100
+
 openmediavault-netatalk (4.0.1-1) stable; urgency=low
 
   * Various improvements.
