--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-nut (4.0.5-1) stable; urgency=low
+
+  * Update locales.
+  * Use Material Design icon.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 22:02:41 +0100
+
 openmediavault-nut (4.0.4-1) stable; urgency=low
 
   * Fix bug in omv-mkrrdgraph plugin.
