--- a/deb/openmediavault-snmp/debian/changelog
+++ b/deb/openmediavault-snmp/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-snmp (4.0.1-1) stable; urgency=low
+
+  * Update locales.
+  * Use Material Design icons.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 22:33:12 +0100
+
 openmediavault-snmp (4.0) stable; urgency=low
 
   * Initial release.
