Use Font Awesome icons.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-clamav (4.1.1-1) stable; urgency=low
+
+  * Update locales.
+  * Use Font Awesome icons.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Nov 2017 12:28:57 +0100
+
 openmediavault-clamav (4.1-1) stable; urgency=low
 
   * Update locales.
