--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,8 @@ openmediavault (4.0.10-1) stable; urgency=low
   * Send notification email if a mount point is missing.
   * Set domain name in Postfix configuration.
   * Use Font Awesome and Material Design icons.
+  * Remove support of the old 'Gray' theme because it does not include and
+    use Font Awesome which is now required by the OMV UI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 05 Nov 2017 21:26:53 +0100
 
