Add slovenian language support.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault (4.0.10-1) stable; urgency=low
 
+  * Update locales.
+  * Add slovenian language support.
   * Send notification email if a mount point is missing.
   * Set domain name in Postfix configuration.
   * Use Font Awesome and Material Design icons.
