--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.11-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 16 Nov 2017 15:26:51 +0100
+
 openmediavault (4.0.10-1) stable; urgency=low
 
   * Update locales.
