--- a/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/sl_SI/openmediavault-forkeddaapd.po
+++ b/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/sl_SI/openmediavault-forkeddaapd.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-forkeddaapd package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-03-17 01:49+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-16 21:39+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,40 +19,40 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "A password is required to access the library."
-msgstr ""
+msgstr "Geslo je zahtevano za dostop do knjižnice."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Avtentikacija"
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Library name"
-msgstr ""
+msgstr "Ime knjižnice"
 
 msgid "Password"
-msgstr ""
+msgstr "Geslo"
 
 msgid "Port"
-msgstr ""
+msgstr "Vrata"
 
 msgid "Port to listen on."
-msgstr ""
+msgstr "Vrata na katerih servis posluša."
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Deljena mapa"
 
 msgid "The location of the media files to share."
-msgstr ""
+msgstr "Lokacija  medijskih datotek za deljenje."
 
 msgid "The name of the library as displayed by the clients."
-msgstr ""
+msgstr "Ime knjižnice, kot je prikazano s strani odjemalcev."
 
 msgid "iTunes/DAAP"
-msgstr ""
+msgstr "iTunes/DAAP"
