--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/sl_SI/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/sl_SI/openmediavault-ldap.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-ldap package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-08-19 14:21+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-17 09:13+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,50 +25,50 @@ msgid "Directory Service"
 msgstr ""
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "Enable PAM"
-msgstr ""
+msgstr "Omogoči PAM"
 
 msgid "Enable SSL/TLS"
-msgstr ""
+msgstr "Omogoči SSL/TLS protokol"
 
 msgid "Enable secure connection."
-msgstr ""
+msgstr "Omogoči varno povezavo."
 
 msgid "Extra client options"
-msgstr ""
+msgstr "Dodatne nastavitve odjemalca"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Dodatne nastavitve"
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Groups suffix"
-msgstr ""
+msgstr "Atribut skupine"
 
 msgid "Host"
-msgstr ""
+msgstr "Gostitelj"
 
 msgid "Password"
-msgstr ""
+msgstr "Geslo"
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/ldap.conf' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Prosimo oglejte si <a href='http://linux.die.net/man/5/ldap.conf' target='_blank'>stran v priročniku</a> za več informacij. "
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Prosimo oglejte si <a href='http://linux.die.net/man/5/nss_ldap' target='_blank'>stran v priročniku</a> za več informacij."
 
 msgid "Root Bind DN"
 msgstr ""
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
@@ -83,16 +84,16 @@ msgid ""
 msgstr ""
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
-msgstr ""
+msgstr "Določa atribut skupine npr. 'ou=Groups'."
 
 msgid "Specifies the port to connect to."
 msgstr ""
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
-msgstr ""
+msgstr "Določa atribut uporabikov npr. 'ou=Users'."
 
 msgid "The FQDN or IP address of the server."
-msgstr ""
+msgstr "FQDN ali IP naslov strežnika."
 
 msgid ""
 "Use LDAP for authentication system-wide along with other authentication "
@@ -100,4 +101,4 @@ msgid ""
 msgstr ""
 
 msgid "Users suffix"
-msgstr ""
+msgstr "Atribut uporabnikov"
