--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (4.0.3-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Nov 2017 10:04:53 +0100
+
 openmediavault-lvm2 (4.0.2-1) stable; urgency=low
 
   * Update locales.
