--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/sl_SI/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/sl_SI/openmediavault-lvm2.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-lvm2 package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-03-17 01:49+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-17 09:21+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Active"
-msgstr ""
+msgstr "Aktivno"
 
 msgid "Add physical volume"
 msgstr ""
@@ -29,13 +30,13 @@ msgid ""
 msgstr ""
 
 msgid "Available"
-msgstr ""
+msgstr "Na voljo"
 
 msgid "Capacity"
-msgstr ""
+msgstr "Kapaciteta"
 
 msgid "Confirmation"
-msgstr ""
+msgstr "Potrditev"
 
 msgid "Create logical volume"
 msgstr ""
@@ -44,13 +45,13 @@ msgid "Create volume group"
 msgstr ""
 
 msgid "Description"
-msgstr ""
+msgstr "Opis"
 
 msgid "Device"
-msgstr ""
+msgstr "Naprava"
 
 msgid "Devices"
-msgstr ""
+msgstr "Naprave"
 
 msgid "Do you really want to create the logical volume?"
 msgstr ""
@@ -71,7 +72,7 @@ msgid "Edit volume group"
 msgstr ""
 
 msgid "Extend"
-msgstr ""
+msgstr "Razširi"
 
 msgid "Extend logical volume"
 msgstr ""
@@ -80,10 +81,10 @@ msgid "Extend volume group"
 msgstr ""
 
 msgid "Free"
-msgstr ""
+msgstr "Prosto"
 
 msgid "Invalid name"
-msgstr ""
+msgstr "Neveljavno ime"
 
 msgid "Logical Volume Management"
 msgstr ""
@@ -92,7 +93,7 @@ msgid "Logical volumes"
 msgstr ""
 
 msgid "Name"
-msgstr ""
+msgstr "Ime"
 
 msgid "No free space available to create a logical volume."
 msgstr ""
@@ -110,22 +111,22 @@ msgid "Reduce volume group"
 msgstr ""
 
 msgid "Resize"
-msgstr ""
+msgstr "Spremeni velikost"
 
 msgid "Select a volume group ..."
 msgstr ""
 
 msgid "Select an device ..."
-msgstr ""
+msgstr "Izberi napravo ..."
 
 msgid "Size"
-msgstr ""
+msgstr "Velikost"
 
 msgid "Snapshot"
-msgstr ""
+msgstr "Snapshot"
 
 msgid "Used"
-msgstr ""
+msgstr "Porabljeno"
 
 msgid "Volume group"
 msgstr ""
