--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/sl_SI/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/sl_SI/openmediavault-netatalk.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-03-17 01:51+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-17 09:20+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,22 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Add share"
-msgstr ""
+msgstr "Dodaj deljeno mapo"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Napredne nastavitve"
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Dovoli prijave kot gost."
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Dovoli gostom ustvarjanje in spreminjanje datotek."
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr ""
+msgstr "Dovoli prijave z gesli, ki niso šifrirana."
 
 msgid "Allow plain passwords"
-msgstr ""
+msgstr "Dovoli  navadna - plain gesla"
 
 msgid "Apple Filing"
 msgstr ""
@@ -48,13 +49,13 @@ msgid "Client sees uppercase, server sees lowercase"
 msgstr ""
 
 msgid "Comment"
-msgstr ""
+msgstr "Komentar"
 
 msgid "Edit share"
-msgstr ""
+msgstr "Uredi deljeno mapo"
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "Enable Time Machine support for this share."
 msgstr ""
@@ -63,28 +64,28 @@ msgid "Enable user home directories."
 msgstr ""
 
 msgid "Enabled"
-msgstr ""
+msgstr "Omogočeno"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Dodatne nastavitve"
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Prijava za goste"
 
 msgid "Guest permissions"
-msgstr ""
+msgstr "Dovoljenja za goste"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Gosti lahko privzeto samo berejo podatke."
 
 msgid "Hide dot files"
-msgstr ""
+msgstr "Skrij datoteke, ki se začnejo s piko"
 
 msgid "Home directories"
-msgstr ""
+msgstr "Domače mape"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
@@ -102,58 +103,58 @@ msgid ""
 msgstr ""
 
 msgid "Lowercases names in both directions"
-msgstr ""
+msgstr "Imena z malo začetnico v obeh mapah"
 
 msgid "Make dot files invisible."
-msgstr ""
+msgstr "Skrij datoteke, ki se začnejo s piko."
 
 msgid "None"
-msgstr ""
+msgstr "Nič"
 
 msgid "Password"
-msgstr ""
+msgstr "Geslo"
 
 msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Prosimo oglejte si <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>stran v priročniku</a> za več informacij."
 
 msgid "Quota"
-msgstr ""
+msgstr "Kvota"
 
 msgid "Read only"
-msgstr ""
+msgstr "Samo za branje"
 
 msgid "Set read only."
-msgstr ""
+msgstr "Nastavi samo za branje"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Deljena mapa"
 
 msgid "Shares"
-msgstr ""
+msgstr "Vse deljene mape"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "Lokacija datotek za deljenje."
 
 msgid "This option handles, if the case of filenames should be changed."
 msgstr ""
 
 msgid "Time Machine support"
-msgstr ""
+msgstr "Podpora za Time Machine"
 
 msgid "Unix privileges"
 msgstr ""
 
 msgid "Uppercases names in both directions"
-msgstr ""
+msgstr "Imena z veliko začetnico v obeh mapah"
 
 msgid "Use AFP3 unix privileges."
-msgstr ""
+msgstr "Uporabite AFP3 unix pravice."
 
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
