--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/sl_SI/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/sl_SI/openmediavault-nut.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-nut package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-03-17 01:51+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-17 09:18+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,96 +19,96 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Charge"
-msgstr ""
+msgstr "Napolnjenost"
 
 msgid "Comment"
-msgstr ""
+msgstr "Komentar"
 
 msgid "Date & Time"
-msgstr ""
+msgstr "Datum in čas"
 
 msgid "Defines when the shutdown is initiated."
-msgstr ""
+msgstr "Definira čas začetka zaustavitve sistema."
 
 msgid "Driver configuration directives"
-msgstr ""
+msgstr "Navodila za konfiguracijo gonilnikov"
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "Enable remote monitoring of the local connected UPS."
-msgstr ""
+msgstr "Omogoči oddaljen nadzor lokalno priklopljenih UPS naprav."
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Identifier"
-msgstr ""
+msgstr "Identifikator"
 
 msgid "Load"
-msgstr ""
+msgstr "Obremenitev"
 
 msgid "Message"
-msgstr ""
+msgstr "Sporočilo"
 
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 msgid "Password"
-msgstr ""
+msgstr "Geslo"
 
 msgid "Program"
-msgstr ""
+msgstr "Program"
 
 msgid "Remote monitoring"
-msgstr ""
+msgstr "Oddaljen nadzor"
 
 msgid "Service disabled"
-msgstr ""
+msgstr "Storitev je onemogočena"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Shutdown mode"
-msgstr ""
+msgstr "Način zaustavitve"
 
 msgid "Shutdown timer"
-msgstr ""
+msgstr "Časovnik za izklo"
 
 msgid "Temperature"
-msgstr ""
+msgstr "Temperatura"
 
 msgid "The name used to uniquely identify your UPS on this system."
-msgstr ""
+msgstr "Univerzalno ime UPS naprave za identifikacijo na sistemu."
 
 msgid ""
 "The time in seconds until shutdown is initiated. If the UPS happens to come "
 "back before the time is up the shutdown is canceled."
-msgstr ""
+msgstr "Čas v sekundah dokler ne pride do zaustavitve. V kolikor v tem času dobi UPS napajanje, se zaustavitev prekine."
 
 msgid ""
 "To get more information how to configure your UPS please check the Network "
 "UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' "
 "target='_blank'>documentation</a>."
-msgstr ""
+msgstr "Za pridobitev več informacij o tem, kako konfigurirati vaš UPS vas prosimo, da si preberete Network UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>dokumentacijo</a>."
 
 msgid "UPS"
-msgstr ""
+msgstr "UPS"
 
 msgid "UPS goes on battery"
-msgstr ""
+msgstr "UPS gre na baterijo"
 
 msgid "UPS reaches low battery"
-msgstr ""
+msgstr "UPS doseže nizko stanje baterije"
 
 msgid "Used for remote authentication."
-msgstr ""
+msgstr "Uporabljeno za oddaljeno avtentikacijo."
 
 msgid "Username"
-msgstr ""
+msgstr "Uporabniško ime"
 
 msgid "Variables"
-msgstr ""
+msgstr "Spremenljivke"
 
 msgid "Voltage"
-msgstr ""
+msgstr "Napetost"
