--- a/deb/openmediavault-route/usr/share/openmediavault/locale/sl_SI/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/sl_SI/openmediavault-route.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-route package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2012-08-31 18:46+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-16 21:37+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Add static route"
-msgstr ""
+msgstr "Dodaj statično usmerjanje"
 
 msgid "Comment"
-msgstr ""
+msgstr "Komentar"
 
 msgid "Edit static route"
-msgstr ""
+msgstr "Uredi statično usmerjanje"
 
 msgid "Gateway"
-msgstr ""
+msgstr "Prehod"
 
 msgid "Gateway used to reach the above network address."
-msgstr ""
+msgstr "Prehod, uporabljen za dostop do zgornjega omrežnega naslova."
 
 msgid "IP or network address."
-msgstr ""
+msgstr "IP ali omrežni naslov"
 
 msgid "Network"
-msgstr ""
+msgstr "Omrežje"
 
 msgid "Static Routes"
-msgstr ""
+msgstr "Statične usmeritve"
