--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/sl_SI/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/sl_SI/openmediavault-shairport.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
+# Miha Bezjak <miha@bezjak.info>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2014-06-23 16:18+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2017-11-17 08:13+0000\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>\n"
 "Language-Team: Slovenian (Slovenia) (http://www.transifex.com/votdev/openmediavault/language/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,30 +19,30 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "A password is required to stream audio."
-msgstr ""
+msgstr "Za pretok zvoka je potrebno uporabiti geslo."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Avtentikacija"
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Name"
-msgstr ""
+msgstr "Ime"
 
 msgid "Password"
-msgstr ""
+msgstr "Geslo"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Shairport"
-msgstr ""
+msgstr "Shairport"
 
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "Ime, ki ga storitev oglašuje odjemalcem. Pustite to polje prazno v kolikor želite kot privzeto uporabiti ime gostitelja."
