--- a/deb/openmediavault-snmp/usr/share/openmediavault/locale/sl_SI/openmediavault-snmp.po
+++ b/deb/openmediavault-snmp/usr/share/openmediavault/locale/sl_SI/openmediavault-snmp.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 20:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>, 2017\n"
 "Language-Team: Slovenian (Slovenia) (https://www.transifex.com/votdev/teams/14254/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,78 +19,80 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Authentication and no privacy"
-msgstr ""
+msgstr "Avtentikacija in brez zasebnosti"
 
 msgid "Authentication and privacy"
-msgstr ""
+msgstr "Avtentikacija in zasebnost"
 
 msgid "Authentication passphrase"
-msgstr ""
+msgstr "Geslo avtentikacije"
 
 msgid "Authentication type"
-msgstr ""
+msgstr "Tip avtentikacije"
 
 msgid "Community"
-msgstr ""
+msgstr "Skupnost"
 
 msgid "Contact"
-msgstr ""
+msgstr "Kontakt"
 
 msgid ""
 "Contact information, e.g. name or email address of the person responsible "
 "for this system."
 msgstr ""
+"Kontaktne informacije npr. ime ali elektronski naslov osebe, ki je odgovorna"
+" za ta sistem."
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Dodatne možnosti"
 
 msgid "General settings"
-msgstr ""
+msgstr "Splošne nastavitve"
 
 msgid "Host"
-msgstr ""
+msgstr "Gostitelj"
 
 msgid "Location"
-msgstr ""
+msgstr "Lokacija"
 
 msgid "Location information, e.g. physical location of this system."
-msgstr ""
+msgstr "Informacije o lokaciji, t.j. fizična lokacija tega sistema."
 
 msgid "No authentication and no privacy"
-msgstr ""
+msgstr "Brez avtentikacije in brez zasebnosti"
 
 msgid "Port"
-msgstr ""
+msgstr "Vrata"
 
 msgid "Privacy passphrase"
-msgstr ""
+msgstr "Geslo zasebnosti"
 
 msgid "Privacy type"
-msgstr ""
+msgstr "Tip zasebnosti"
 
 msgid "SNMP"
-msgstr ""
+msgstr "SNMP"
 
 msgid "SNMP version 1/2c"
-msgstr ""
+msgstr "SNMP različica 1/2c"
 
 msgid "SNMP version 3"
-msgstr ""
+msgstr "SNMP različica 3"
 
 msgid "Security level"
-msgstr ""
+msgstr "Raven varnosti"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Traps"
-msgstr ""
+msgstr "Pasti"
 
 msgid "Username"
-msgstr ""
+msgstr "Uporabniško ime"
 
 msgid "Version"
-msgstr ""
+msgstr "Različica"
