--- a/deb/openmediavault-tftp/usr/share/openmediavault/locale/sl_SI/openmediavault-tftp.po
+++ b/deb/openmediavault-tftp/usr/share/openmediavault/locale/sl_SI/openmediavault-tftp.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Miha Bezjak <miha@bezjak.info>, 2017\n"
 "Language-Team: Slovenian (Slovenia) (https://www.transifex.com/votdev/teams/14254/sl_SI/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,55 +19,61 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 msgid "Allow new files"
-msgstr ""
+msgstr "Dovoli nove datoteke"
 
 msgid "Allow new files to be created."
-msgstr ""
+msgstr "Dovoli  ustvarjanje novih datotek"
 
 msgid "Blocksize"
-msgstr ""
+msgstr "Velikost bloka"
 
 msgid "By default, only files that already exist are allowed to be uploaded."
-msgstr ""
+msgstr "Privzeto se lahko naloži samo datoteke, ki že obstajajo."
 
 msgid ""
 "Determine the default timeout, in microseconds, before the first packet is "
 "retransmitted."
 msgstr ""
+"Določite privzeto zakasnitev v mikrosekundah, preden je prvi paket ponovno "
+"prenesen."
 
 msgid "Enable"
-msgstr ""
+msgstr "Omogoči"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Dodatne nastavitve"
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
 msgstr ""
+"V kolikor je kreiranje novih datotek dovoljeno, vas prosimo, da preverite, "
+"če je deljena mapa javno zapisljiva."
 
 msgid "Port"
-msgstr ""
+msgstr "Vrata"
 
 msgid "Port to listen on."
-msgstr ""
+msgstr "Vrata na katerih servis posluša."
 
 msgid "Retry timeout"
-msgstr ""
+msgstr "Časovna omejitev ponovnega poskusa"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavitve"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Deljena mapa"
 
 msgid ""
 "Specifies the maximum permitted block size. The permitted range for this "
 "parameter is from 512 to 65464."
 msgstr ""
+"Določa največjo dovoljeno velikost bloka. Dovoljeno območje za ta parameter "
+"je med 512 in 65464."
 
 msgid "TFTP"
-msgstr ""
+msgstr "TFTP"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "Lokacija datotek za deljenje."
