--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (4.0.11-1) stable; urgency=low
 
-  *
+  * Update locales.
+  * Various improvements.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 16 Nov 2017 15:26:51 +0100
 
