Mantis 0001853: Don't throw an exception if shared folder bind mount can not be stopped.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (4.0.12-1) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001853: Don't throw an exception if shared folder bind mount
+    can not be stopped.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Nov 2017 11:14:37 +0100
 
