--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (4.0.12-1) stable; urgency=low
   * Various improvements.
   * Mantis 0001853: Don't throw an exception if shared folder bind mount
     can not be stopped.
+  * Make sure NFS shares 'Extra options' are valid.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Nov 2017 11:14:37 +0100
 
